5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1585_2905.log
== TEST (2019-03-26 11:20:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))
s = (a+b+c)/2
print((s*(s-a)*(s-b)*(s-c))**1/2)


-- OUTPUT:
2409.5456218750023
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))
s = (a+b+c)/2
print(round(s*(s-a)*(s-b)*(s-c)**1/2),5)


-- OUTPUT:
2410 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:23:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))
s = (a+b+c)/2
print(round(s*(s-a)*(s-b)*(s-c)**1/2),5))


-- EXECUTION TIME:
0.19738
-- ERROR:
  File "/home/codebench/codes/1585/2905/main.py", line 8
    print(round(s*(s-a)*(s-b)*(s-c)**1/2),5))
                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:23:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))
s = (a+b+c)/2
print(round(s*(s-a)*(s-b)*(s-c)**1/2),5)


-- EXECUTION TIME:
0.177943
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
2410 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
180000 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
251459 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:24:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))

s = (a+b+c)/2
print(round((s*(s-a)*(s-b)*(s-c))**1/2),5)


-- EXECUTION TIME:
0.193899
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
2410 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
180000 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
lado: lado: lado: 251459 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:33:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

a = float(input('lado: '))
b = float(input('lado: '))
c = float(input('lado: '))

s = (a+b+c)/2
print(round(math.sqrt(s*(s-a)*(s-b)*(s-c)),5))


-- EXECUTION TIME:
0.182593
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
